# tickpulse

./: .editorconfig  .gitattributes  .gitignore  2026-06-11-183043-doc.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/adjust/: exright.rs  mod.rs
src-tauri/src/alert/: mod.rs  rules.rs
src-tauri/src/analysis/: auto_trigger.rs  checkpoint.rs  debate.rs  decision_memory.rs  engine.rs  mod.rs  peg.rs  profiles.rs  progress.rs  prompts.rs  quality_gate.rs  report.rs  schemas.rs
src-tauri/src/analysis/dimensions/: competitive.rs  financial.rs  (+6 more)
src-tauri/src/anomaly/: mod.rs  types.rs
src-tauri/src/cache/: mod.rs  policy.rs
src-tauri/src/datasource/: mod.rs  rate_limiter.rs
src-tauri/src/db/: migrations.rs  mod.rs  position.rs  settings.rs  watchlist.rs
src-tauri/src/health/: mod.rs
src-tauri/src/indicator/: boll.rs  ema.rs  ma.rs  macd.rs  mod.rs
src-tauri/src/limit/: board_type.rs  mod.rs
src-tauri/src/logging/: buffer.rs  mod.rs
src-tauri/src/market/: data_vendor_router.rs  exchange.rs  field_registry.rs  mod.rs  northbound_cache.rs  scheduler.rs  ticker_normalizer.rs  trade_calendar.rs  types.rs
src-tauri/src/sidecar/: mod.rs
src-tauri/src/sync/: auth.rs  client.rs  mod.rs
src-tauri/src/system/: autostart.rs  hotkey.rs  mod.rs  tray.rs  window.rs
(+152 files in other folders)
