[package]
name = "tickpulse"
version = "0.1.0"
description = "TickPulse - A股桌面行情监控"
authors = ["jonychen"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tickpulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
parking_lot = "0.12"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
async-trait = "0.1"
urlencoding = "2"
tokio-util = "0.7"
once_cell = "1"
encoding_rs = "0.8"
sysinfo = "0.30"
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
